--- a/report/report.tex
+++ b/report/report.tex
@@ -92,6 +92,7 @@
 \include{chapter2}
 \include{chapter3}
 \include{chapter4}
+\include{chapter5}
 \include{chapter6}
 
 \bibliography{refs}             % this causes the references to be
